fixes layout issues with planes and affiliates

--- a/akaflieg-client/src/app/sections/planes/planes.component.scss
+++ b/akaflieg-client/src/app/sections/planes/planes.component.scss
@@ -7,6 +7,10 @@
   margin: 0 auto;
 }
 
+h5 {
+  font-size: medium;
+}
+
 @media (min-width: 768px) {
   .img-planes {
     width: 170px;
